syntax = "proto3";

option go_package = "hello";

service HelloService{
    rpc HelloWorld(HelloRequest) returns (HelloResponse);
}

message HelloRequest{
    string msg = 1;
}

message HelloResponse{
    string response = 1;
}

